Add button in the portfolio section dynamically

--- a/index.html
+++ b/index.html
@@ -140,12 +140,8 @@
                   eget tincidunt.
             </p>
         </div>
-        <ul>
-            <li><button class="btn active" data-id ="all">all</button></li>
-            <li><button class="btn" data-id ="photo">photo</button></li>
-            <li><button class="btn" data-id ="app">app</button></li>
-            <li><button class="btn" data-id ="web">web</button></li>
-            <li><button class="btn" data-id ="print">print</button></li>
+        <ul class="btn-container">
+            <!-- Add buttons dynamically with javascript -->
         </ul>
        </div>
         <div class="portfolio-content">
