Add review slide with js

--- a/index.html
+++ b/index.html
@@ -214,37 +214,30 @@
     <!-- End Stats -->
     <!-- Start testimonials -->
     <div id="skills" class="our-skills">
-      <div class="container">
+    <div class="container">
         <div class="testimonial"  >
             <h3>testimonials</h3>
             <p class="para">
                 Curabitur arcu erat, accumsan id imperdiet et,
                 porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
             </p>
-            <div class="box">
-                <img src="images/skills-01.jpg" alt="">
-                <div class="text">
-                    <p>
-                        Curabitur arcu erat, accumsan id imperdiet et, 
-                        porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
-                    </p>
-                    <div>John Doe, CEO</div>
+            <div class="testimonials-box">
+                <div class="image-container">
+                    <img class="testimonial-image" alt="">
                 </div>
+                <h3 class="testimonial-title">Jef Marcos</h3>
+                <span class="testimonial-job">front end developer</span>
+                <p class="testimonial-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione expedita excepturi doloribus. Dolorum quis mollitia tenetur nostrum cupiditate sequi repellat quidem beatae, expedita dolorem alias assumenda maxime ducimus aperiam omnis!</p>
+                <div class="buttons-container">
+                    <button class="prev-btn"><i class="fa-solid fa-chevron-left"></i></button>
+                    <button class="next-btn"><i class="fa-solid fa-chevron-right"></i></button>
+                    </div>
             </div>
-            <div class="box">
-                <img src="images/skills-02.jpg" alt="">
-               <div class="text">
-                    <p>
-                        Curabitur arcu erat, accumsan id imperdiet et, 
-                        porttitor at sem. Mauris blandit aliquet elit, eget tincidunt.
-                    </p>
-                    <div>John Doe, CEO</div>
-               </div>
-            </div>
+            
                 <ul class="bullets">
-                    <li></li>
-                    <li class="active"></li>
-                    <li></li>
+                    <li class="bullet" attr="0"></li>
+                    <li class="bullet active" attr="1"></li>
+                    <li class="bullet" attr="2"></li>
                 </ul>
         </div>
         <div class="skills">
